# bRAGv2

./: README.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/chat/: api.py  constants.py  exceptions.py  models.py  retrieval.py  services.py  streaming.py
app/chats/: constants.py
app/core/: api.py  constans.py  constants.py  logs.py  models.py
app/settings/: __init__.py  base.py
requirements/: requirements-dev.txt  requirements.txt
