[tool.poetry]
name = "bragv2"
version = "0.1.0"
description = ""
authors = ["Damian Kanski <damiankanski4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.103.2"
openai = "^0.28.1"
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
sentry-sdk = "^1.32.0"
pugsql = "^0.2.4"
psycopg2-binary = "^2.9.9"
ruff = "^0.1.0"
clack = "^1.2.0"
black = "^23.10.0"
qdrant-client = {extras = ["fastembed"], version = "^1.6.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
